feat(v3): rebuild desktop frontend
